2014-01-30 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * fixed build-puppet-module script
  * initial commit