@@ -1,3 +1,4 @@
-2014-01-30 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+2014-02-02 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * removed dead code from lib/oval/collection.rb
   * fixed build-puppet-module script
   * initial commit
